--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
       // format the data
       data.forEach(function(d) {
-        d.time = new Date(d.time * 1000);
+        d.time = new Date(d.time.match(/\d.+/g) * 1000);
         d.temp15 = +d.temp15;
         d.temp21 = +d.temp21;
       });
